fix[crypto.substitution]: upcase bug & text wrap

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -10,7 +10,7 @@ body {
   font-family: "Inconsolata", monospace;
 
   @media (prefers-color-scheme: dark) {
-    color-scheme: dark;
+    /*color-scheme: dark;*/
   }
 
   ::-webkit-scrollbar {
@@ -34,6 +34,6 @@ body {
   }
 
   input, textarea, select {
-    @apply bg-white text-gray-800;
+    @apply bg-white text-gray-800 accent-white;
   }
 }
